--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b66870">  <td>18/06/02 21:55:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageSearchTest.init()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@3532ec19]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>18/06/02 21:55:22</td>   <td>3429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSearchTest.verifysearchButton()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@3532ec19]">verifysearchButton</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>18/06/24 20:03:07</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageSearchTest.endSession()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@6f7fd0e6]">&lt;&lt;endSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>18/06/24 20:03:03</td>   <td>-3851</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageSearchTest.init()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@6f7fd0e6]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>18/06/24 20:03:07</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSearchTest.verifysearchButton()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@6f7fd0e6]">verifysearchButton</td> 
+  <td>main@1454127753</td>   <td></td> </tr>
 </table>
