--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.FutureItVisionFramework.searchtest.HomePageSearchTest" hash-for-method="verifysearchButton">verifysearchButton</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.FutureItVisionFramework.searchtest.Catalog" hash-for-method="verifyCatalogDressSelectale">verifyCatalogDressSelectale</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.FutureItVisionFramework.searchtest.HomePageSearchTest</span>
+              <span class="class-name">com.FutureItVisionFramework.searchtest.Catalog</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifysearchButton">
-                  </a> <!-- verifysearchButton -->
-                  <span class="method-name">verifysearchButton</span>
+                  <a name="verifyCatalogDressSelectale">
+                  </a> <!-- verifyCatalogDressSelectale -->
+                  <span class="method-name">verifyCatalogDressSelectale</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/xc/6sf0jwrj1kld9nykm9hs0zpm1hp1_p/T/testng-eclipse-877654405/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/xc/6sf0jwrj1kld9nykm9hs0zpm1hp1_p/T/testng-eclipse-120785030/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.FutureItVisionFramework.searchtest.HomePageSearchTest&quot;&gt;
+      &lt;class name=&quot;com.FutureItVisionFramework.searchtest.Catalog&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifysearchButton&quot;/&gt;
+          &lt;include name=&quot;verifyCatalogDressSelectale&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.FutureItVisionFramework.searchtest.HomePageSearchTest --&gt;
+      &lt;/class&gt; &lt;!-- com.FutureItVisionFramework.searchtest.Catalog --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifysearchButton')
-data.setCell(0, 2, 'com.FutureItVisionFramework.searchtest.HomePageSearchTest')
-data.setCell(0, 3, 161);
+data.setCell(0, 1, 'verifyCatalogDressSelectale')
+data.setCell(0, 2, 'com.FutureItVisionFramework.searchtest.Catalog')
+data.setCell(0, 3, 9000);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 161 ms</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,18 +223,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.FutureItVisionFramework.searchtest.HomePageSearchTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.FutureItVisionFramework.searchtest.Catalog</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">init</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verifysearchButton</span>
-                <span class="method-start">4927 ms</span>
+                <span class="method-name">verifyCatalogDressSelectale</span>
+                <span class="method-start">3042 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">endSession</span>
-                <span class="method-start">5092 ms</span>
+                <span class="method-start">12045 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
