--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>18/07/07 01:54:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageSearchTest.init()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@402a079c]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/07/07 01:54:38</td>   <td>4918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSearchTest.verifysearchButton()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@402a079c]">verifysearchButton</td> 
-  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/07/07 01:54:39</td>   <td>5084</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageSearchTest.endSession()[pri:0, instance:com.FutureItVisionFramework.searchtest.HomePageSearchTest@402a079c]">&lt;&lt;endSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>18/07/21 18:46:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Catalog.init()[pri:0, instance:com.FutureItVisionFramework.searchtest.Catalog@5649fd9b]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2006034581</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>18/07/21 18:46:14</td>   <td>3037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Catalog.verifyCatalogDressSelectale()[pri:0, instance:com.FutureItVisionFramework.searchtest.Catalog@5649fd9b]">verifyCatalogDressSelectale</td> 
+  <td>main@2006034581</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>18/07/21 18:46:23</td>   <td>12040</td> <td>&nbsp;</td><td title="&lt;&lt;Catalog.endSession()[pri:0, instance:com.FutureItVisionFramework.searchtest.Catalog@5649fd9b]">&lt;&lt;endSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2006034581</td>   <td></td> </tr>
 </table>
